--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,22 +1,32 @@
-name: App Python para Testar Github Action
+name: Python application
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - main
+      - 'feature/*'
+  pull_request:
+    branches:
+      - main
 
 jobs:
-  build:
-
+  test:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up Python 3.11
-      uses: actions/setup-python@v5
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
+    - name: Set up Python
+      uses: actions/setup-python@v2
       with:
-        python-version: 3.11
-    - name: Intala dependencias
-      run: 
+        python-version: '3.11'  # Use a versão do Python necessária
+
+    - name: Install dependencies
+      run: |
         python -m pip install --upgrade pip
-        pip install pytest
-    - name: Teste com Pytest
-      run:
-        pytest
+        pip install -r requirements.txt
+
+    - name: Run tests
+      run: |
+        pytest  # ou o comando que você utiliza para rodar os testes
