--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -29,4 +29,4 @@ jobs:
 
     - name: Run tests
       run: |
-        pytest  # ou o comando que você utiliza para rodar os testes
+        python -m pytest  # ou o comando que você utiliza para rodar os testes
