--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
-colorama
-coverage
-iniconfig
-packaging
-pluggy
-pytest
-pytest-cov
+colorama==0.4.6
+coverage==7.6.3
+greenlet==3.1.1
+iniconfig==2.0.0
+packaging==24.1
+pluggy==1.5.0
+pytest==8.3.3
+pytest-cov==5.0.0
+SQLAlchemy==2.0.35
+typing_extensions==4.12.2
